syntax = "proto3";
package proto;

// Defining a Service, a Service can have multiple RPC operations
service CleaningRobotService {
  rpc introduceYourself(Introduction) returns (Ack);
  rpc leaving(CRRepService) returns (Ack);
  rpc areYouAlive(Ack) returns (Ack);
  rpc maintenanceNeed(MaintenanceReq) returns (CRRepService);
}
message MaintenanceReq {
  CRRepService crp = 1;
  string time = 2;
}
message Introduction {
  CRRepService crp = 1;
  Position position = 2;
}
message Position {
  int32 x = 1;
  int32 y = 2;
}
message Ack {}

message CRRepService {
  string ID = 1;
  string IP = 2;
  int32 port = 3;
}

message SumResponse {
  int64 result = 1;
  repeated int64 addend = 2;
}
